Fixed typo in settings-local.sh