@@ -2,74 +2,196 @@
 
 Chef Cookbook to manage a "Feed the Beast"-Server installation on FreeBSD.
 
-## Supports
+**INFO: The Recipes `auto_restart` and `mod_dynmap` are currently WIP and will be available in ASAP**
 
- * FreeBSD >= 10.3
+## Requirements
+
+### Platforms
+
+ * FreeBSD-10.3+
+ 
+### Chef
+
+ * Chef-12.1+
+ 
+### Dependent Cookbooks
+
+ * poise_archive-1.3.0+
+ 
+## General Info On The How And Why
+
+The FTB-Server installation is devided into parts:
+
+ 1. The user/group and its home-dir
+ 1. The FTB-Pack main directory and each version
+ 1. The files/directories that contain world data, backup, and config that are symlinked into each version-dir
+ 
+An installed FTB-Server will have the following directory structure:
+```
+/usr/local/<user>/<pack>
+                       \_ Server.<version_a>
+                                           \_ installation_files/directories
+                                           \_ server.properties
+                                           \_ symliked files/directories from .Addon
+                       \_ Server.<version_b>
+                                           \_ installation_files/directories
+                                           \_ server.properties
+                                           \_ symliked files/directories from .Addon
+                       \_ Server #symlink to current version_dir for informational purposes
+                       \_ .Addon
+                               \_ ops.json
+                               \_ whitelist.json
+                               \_ banned-ips.json
+                               \_ banned-players.json
+                               \_ world/
+                               \_ backups/
+                               \_ ...
+                               
+/usr/local/etc/rc.d/ftbserver
+```
+The JSON-Files cannot be delivered easily as templates since they are updated through Minecraft. 
+So you will have to manage them yourself in a wrapping Cookbook (or similar - see *Usage* below) and put them into the .Addons-dir
+yourself. The Cookbook will then symlink these files to the current Server-directory. The world- and backups-directories will only
+be created and then symlinked. That way the current world and backups will be available with every version within the installed pack.
+For every new pack-version a new directory will be created that is called `Server.<version>` by default. And then a symlink named `Server`
+will be created that points to the currently active installation. This symlink is for informational purposes only since it serves
+no technical purpose in this Cookbook.
 
 ## Attributes
 
-node['ftb_server']['openjdk_version'] - OpenJDK version to install. Default: '8'
-node['ftb_server']['user']['name'] - The local user that will run the server. Default: 'mcserver'
-node['ftb_server']['user']['group'] - The group the user belongs to. Default: 'mcserver'
-node['ftb_server']['user']['shell'] - The shell of the user. Default: '/bin/sh'
+### General
 
-node['ftb_server']['server_properties']['motd'] = 'a friendly text'
-node['ftb_server']['server_properties']['seed'] = '92349724928374'
-node['ftb_server']['server_properties'][<other_stuff>] - all other props
+ - `node['ftb_server']['openjdk_version']` - Which OpenJDK version to install. Default: `8`
+ - `node['ftb_server']['packages']` - Array of packages that have to be installed prior to rolling out the FTB server. Default: `%W( openjdk#{node['ftb_server']['openjdk_version']} tmux curl )`
+ - `node['ftb_server']['install_base']` - Base directory name for an installation. Default: `'Server'`
+ - `node['ftb_server']['addon_dir']` - Name of the directory that will contain all symlinked files. Default: `'.Addon'`
+ - `node['ftb_server']['start_server']` - Whether to enable and start the server or not. Default: `true`
 
-node['ftb_server']['pack']['base_url'] - The base url that contains the packs. Default: 'http://www.creeperrepo.net/FTB2/modpacks'
-node['ftb_server']['pack']['name'] - The Name of the pack on the Server. This is the directory name. Default: 'FTBInfinityLite110'
-node['ftb_server']['pack']['version'] - The version of the Pack to install. You can set it in the classic manner, like '1.2.0'. Or you define it like so '1_2_0'. Since both variants are needed, we will transform the dots and underscores accordingly.
+### auto_restart-Recipe
 
-node['ftb_server']['start_server'] - Do you want to start the Server process, after the installation? Default: true
+ - `node['ftb_server']['auto_restart']['enable']` - It is a good idea to restart a Minecraft server in regular intervals. Setting this to `true` will create
+  a cronjob that does exactly this. Default: `true`
+ - `node['ftb_server']['auto_restart']['time']` - The time at which the server gets restarted. Default: `{ minute: '0', hour: '5' }`. 
+ See Chef's [cron](https://docs.chef.io/resource_cron.html) resource for more info.
 
-node['ftb_server']['start_script']['xms'] = '2G'
-node['ftb_server']['start_script']['xmx'] = '4G'
-node['ftb_server']['start_script']['add_fml_confirm_option'] = true (if false, server might not start up because of changed blocks)
+### User/Group
 
-node['ftb_server']['mod_dynmap']['do_setup'] = true
-node['ftb_server']['mod_dynmap']['jar_url'] = 'http://addons.curse.cursecdn.com/files/2307/83/Dynmap-2.3-forge-1.9.4.jar' (rename to dynmap.jar locally)
-node['ftb_server']['mod_dynmap']['config'][<params>] - properties
+ - `node['ftb_server']['user']['name']` - The system user. Default: `'ftb'`
+ - `node['ftb_server']['user']['group']` - The user's system group. Default: `'ftb'`
+ - `node['ftb_server']['user']['shell']` - Login shell of the system user. Default: `'/bin/sh'`
+ - `node['ftb_server']['user']['home']` - Home directory of the system user. This is also where the FTB installations will be made. Default: `'/usr/local/ftb'`
 
-Complete URL would then be: 'http://www.creeperrepo.net/FTB2/modpacks/FTBInfinityLite110/1_2_0/FTBInfinityLite110Server.zip'
+### Addon Config
 
-## How it works
+ - `node['ftb_server']['addon_config']['files']` - Array with the config files that will be symlinked to the current version's directory. Default: `%w( whitelist.json ops.json banned-ips.json banned-players.json )`
 
-Condition for the steps might be: version does not match (maybe check for Server.version-Dir?)
+### eula.txt-File
 
- 1. stops server, if running (kills process with pid from pid file and checks if pid gone, deletes pid file. else: raise Error)
- 1. OpenJDK is installed and current
- 1. TMUX is installed and current
- 1. Curl is installed and current:
- 1. The user and ins home dir is created
- 1. Creates the FTBServer Home dir that is named after 'pack_name'
- 1  Creates .Addons Dir in FTBServer Home with subdirs: world, backups, dynmap(if wanted)
- 1. Creates Server.version dir inside FTBServer Home Dir
- 1. Downloads and extracts the FTB-Server.zip inside Server.version dir
- 1. Puts several templates in place (server.properties, eula)
-  1. server.properties
-   1. motd will contain version, pack_name and motd-property.
-   1. seed is setable
-   1. mostly all other properties
-  1. eula: set to true
- 1. Rollout ServerStart.sh with xms, xmx and fml.confirm
- 1. Puts mods in files/mods in place (e.g. Dynmap, if wanted)
- 1. Puts config in files/config in place (e.g. Dynmap config, if wanted)
- 1. configure mods
-  1. Dynmap: config as template, jar from url
- 1. Puts an rc-script in place and configures it in rc.conf (opens a tmux and calls ServerStart.sh in server directory, writes pid file)
- 1. Starts server
+ - `node['ftb_server']['eula']['do_accept']` - We have to accept the Minecraft eula to be able to start the FTB Server. If you set this to `false` then the server won't start. Default `true`
+
+### settings-local.sh-File
+
+ - `node['ftb_server']['settings_local_sh']['java_cmd']` - The name of the java binary. Default: `'java'`
+ - `node['ftb_server']['settings_local_sh']['xms']` - The Java XMS value. Default `'2G'`
+ - `node['ftb_server']['settings_local_sh']['xmx']` - The Java XMX value. Default: `'5G'`
+ - `node['ftb_server']['settings_local_sh']['permgen_size']` - Java's PermGen Size. Default: `'256M'`
+ - `node['ftb_server']['settings_local_sh']['java_parameters']` - Array with Java parameters. Default: `%w(
+                                                                    -XX:+UseParNewGC
+                                                                    -XX:+CMSIncrementalPacing
+                                                                    -XX:+CMSClassUnloadingEnabled
+                                                                    -XX:ParallelGCThreads=2
+                                                                    -XX:MinHeapFreeRatio=5
+                                                                    -XX:MaxHeapFreeRatio=10
+                                                                  )`
+### FML-Confirm
+
+ - `node['ftb_server']['fml']['add_confirm_option']` - Whether to confirm world/block-changes that might occur during server update. If this is `false` the server might not start and will wait for user interaction.
+  Default: `true`
+ - `node['ftb_server']['fml']['confirm_option']` - The Java parameter for FML-Confirm. Default: `'-Dmfl.queryRestult=confirm'`
+
+### server.properties-File
+
+The following attributes are the server.peoperties attributes with the same name. The attributes are not explained any further. Only the default
+values and a hint will be shown next to the attribute
+
+ - `node['ftb_server']['server_properties']['spawn_protection']` - Default: `16`
+ - `node['ftb_server']['server_properties']['max_tick_time']` - Default: `60000`
+ - `node['ftb_server']['server_properties']['generator_settings']` - Default: `''`
+ - `node['ftb_server']['server_properties']['force_gamemode']` - Default: `true`
+ - `node['ftb_server']['server_properties']['allow_nether']` - Default: `true`
+ - `node['ftb_server']['server_properties']['gamemode']` - Default: `0`
+ - `node['ftb_server']['server_properties']['broadcast_console_to_ops']` - Default: `true`
+ - `node['ftb_server']['server_properties']['enable_query']` - Default: `false`
+ - `node['ftb_server']['server_properties']['player_idle_timeout']` - Default: `0`
+ - `node['ftb_server']['server_properties']['difficulty']` - Default: `1`
+ - `node['ftb_server']['server_properties']['spawn_monsters']` - Default: `true`
+ - `node['ftb_server']['server_properties']['op_permission_level']` - Default: `4`
+ - `node['ftb_server']['server_properties']['announce_player_achievements']` - Default: `true`
+ - `node['ftb_server']['server_properties']['pvp']` - Default: `true`
+ - `node['ftb_server']['server_properties']['snooper_enabled']` - Default: `true`
+ - `node['ftb_server']['server_properties']['level_type']` - Default: `'BIOMESOP'`
+ - `node['ftb_server']['server_properties']['hardcore']` - Default: `false`
+ - `node['ftb_server']['server_properties']['enable_command_block']` - Default: `false`
+ - `node['ftb_server']['server_properties']['max_players']` - Default: `20`
+ - `node['ftb_server']['server_properties']['network_compression_threshold']` - Default: `256`
+ - `node['ftb_server']['server_properties']['resource_pack_sha1']` - Default: `''`
+ - `node['ftb_server']['server_properties']['max_world_size']` - Default: `29999984`
+ - `node['ftb_server']['server_properties']['server_port']` - Default: `25565`
+ - `node['ftb_server']['server_properties']['texture_pack']` - Default: `''`
+ - `node['ftb_server']['server_properties']['server_ip']` - Default: `node['ipaddress']`
+ - `node['ftb_server']['server_properties']['spawn_npcs']` - Default: `true`
+ - `node['ftb_server']['server_properties']['allow_flight']` - Default: `true`
+ - `node['ftb_server']['server_properties']['level_name']` - Default: `'world'`
+ - `node['ftb_server']['server_properties']['view_distance']` - Default: `12`
+ - `node['ftb_server']['server_properties']['resource_pack']` - Default: `''`
+ - `node['ftb_server']['server_properties']['spawn_animals']` - Default: `true`
+ - `node['ftb_server']['server_properties']['white_list']` - Default: `true`
+ - `node['ftb_server']['server_properties']['generate_structures']` - Default: `true`
+ - `node['ftb_server']['server_properties']['online_mode']` - Default: `true`
+ - `node['ftb_server']['server_properties']['max_build_height']` - Default: `256`
+ - `node['ftb_server']['server_properties']['level_seed']` - Default: `'2323115871908605002'` (my favorite seed)
+ - `node['ftb_server']['server_properties']['motd']` - Minecraft will escape characters like !, = etc so we might as well escape them here to prevent 
+ rewrite of the config with every chef run. Will get the current version and pack name prepended to it automatically. Default: `'Be nice to each other\! NO griefing\!\!'`
+ - `node['ftb_server']['server_properties']['enable_rcon']` - Default: `false`
+ - `node['ftb_server']['server_properties']['additional_options']` - Hash that can contain any other server.properties option not listed above in the form
+ `{'my-property' => 'value'}`. Default: `{}`
+
+### Pack Related
+
+ - `node['ftb_server']['pack']['base_url']` - Base URL where the FTB Server packs can be found. Default: `'http://ftb.cursecdn.com/FTB2/modpacks'`
+ - `node['ftb_server']['pack']['name']` - FTB modpack name. Has to be equal to the packs subdirectory on the download server. Must be set on a role/environment. Default: `nil`
+ - `node['ftb_server']['pack']['version']` - Version of the FTB modpack in the form `X.Y.Z`. Must be set in a role/environment. Default: `nil`
+
+ 
+### mod_dynmap-Recipe
+
+ - `node['ftb_server']['mod_dynmap']['jar_url']` - URL to the Forge Version of the Dynmap jar-file. Default: `''`
+ - `node['ftb_server']['mod_dynmap']['config'][<params>]` - Properties in the Dynmap config file (TBD)
 
 ## Usage
 
 ### Standalone
-Add `ftb_server::default` to your Nodes run list
 
-### In a wrapper-cookbook
+ 1. Add `ftb_server::default` to your Nodes run list 
+ 1. Add pack name and version to your role/environment. Role-Example:
+ ```ruby
+ override_attributes({
+   "ftb_server" => {
+       "pack" => {
+           "name" => "FTBInfinityLite110",
+           "version" => "1.3.3"
+       }
+   }
+ })
+ ```
+### In a wrapper-cookbook with managed JSON-Files
+
+ 1. Put your JSON-Files into the files-directory of your wrapper cookbook
+ 1. Add the following to your wrapper Cookbooks `default.rb`
 
 ```ruby
 node['ftb_server']['addon_config']['files'].each do |file|
-  cookbook_file ::File.join(node['ftb_server']['addon_config']['dir'], file) do
+  cookbook_file ::File.join(node['ftb_server']['pack_addon_dir'], file) do
     source file
     owner node['ftb_server']['user']['name']
     group node['ftb_server']['user']['group']
@@ -79,6 +201,18 @@ end
 
 include_recipe 'ftb_server::default'
 ```
+ 
+ 1. Add pack name and version to your role/environment. Role-Example:
+     ```ruby
+     override_attributes({
+       "ftb_server" => {
+           "pack" => {
+               "name" => "FTBInfinityLite110",
+               "version" => "1.3.3"
+           }
+       }
+     })
+     ```
 
 ## Recipes
 
@@ -86,20 +220,18 @@ include_recipe 'ftb_server::default'
 
 Add this recipe to your run list and set the needed attributes to get going
 
-### ftb_server::prepare
-
-Creates base dirs/files
-
 ### ftb_server::install
 
-Gets the pack going
+Gets the pack going. Included in the Default-Recipe
 
 ### ftb_server::auto_restart
 
+**INFO: Not Yet Implemented**
 Creates a cronjob that restarts the server periodically, if enable is true
 
 ### ftb_server::mod_dynmap
 
+**INFO: Not Yet Implemented**
 Installs and configures dynmap
 
 ## License and Authors
